# decision_tree_ensemble_model

./: .gitignore  CMakeLists.txt  Makefile  README.md  biblio.md  build.sh  functions.cpp  functions.h  main  main.cpp  main_comparison.cpp  main_data_clean.cpp  main_kfold.cpp  test.cpp
Rapport PPN/: main.tex  rapportECL2024.cls
Rapport PPN/logos/: data_clean.jpg:Zone.Identifier
data_clean/: CMakeLists.txt  Makefile  data_clean.cpp  data_clean.h  data_clean_tests.cpp  main_data_clean.cpp  test_data_clean.cpp
data_cleaning/: data_cleaning.cpp  data_cleaning_binning.cpp
datasets/: cleaned_data.csv  datasets.md
datasets/processed/: cleaned_data_10k_ga_adaptative.csv  cleaned_data_20k_ga_adaptative.csv  cleaned_data_25k_ga_adaptative.csv  cleaned_data_30k_ga_adaptative.csv  cleaned_data_5k_ga_adaptative.csv
datasets/raw/: test.csv
ensemble_bagging/: CMakeLists.txt  bagging.cpp  bagging.h  test_bagging.cpp  tests_bagging.cpp
ensemble_boosting/: CMakeLists.txt  boosting.cpp  boosting.h  boosting_model.txt  loss_function.cpp  loss_function.h  test_boosting.cpp  tests_boosting
ensemble_boosting_XGBoost/: CMakeLists.txt  boosting_XGBoost.cpp  boosting_XGBoost.h  decision_tree_XGBoost.cpp  decision_tree_XGBoost.h  main_XGBoost.cpp  test  test1
experiments/: compare_boosting_vs_lightgbm.py
function_test/: functions_tree.cpp
functions_io/: CMakeLists.txt  Makefile  functions_io.cpp  functions_io.h  test_functions_io.cpp  test_io.cpp  visualization_utils.h
functions_tree/: CMakeLists.txt  Makefile  decision_tree_XGBoost.cpp  decision_tree_XGBoost.h  decision_tree_single.cpp  decision_tree_single.h  feature_importance.cpp  feature_importance.h  functions_tree.cpp  functions_tree.h  math_functions.cpp  math_functions.h  regression_tree.cpp  regression_tree.h  splitting_criteria.h  test_functions_tree.cpp  test_tree.cpp  tests_decision_tree  tree_visualization.cpp  tree_visualization.h
model_comparison/: model_comparison.h
plots/: bagging_hybrid_scaling.csv  benchmark.py  benchmarkMPI.py  benchmark_results_extended.csv  benchmarkmodel5.py  filter_mpi.py  make_scaling_plots.py  plot.py  plot_accuracy_vs_threads.py  plots_strong_scaling_mpi.py  plots_weak_scaling_mpi.py  scaling_results.csv  scaling_results_all.csv  scaling_results_all2.csv  scaling_results_no_advgbdt.csv  scaling_results_without_mpi.csv
profiling/bagging_maqao/exp_bagging/: config.json  content.json  last_command.txt
profiling/bagging_maqao/exp_bagging/OTTER/: input_manifest.csv  output_manifest.csv
profiling/bagging_maqao/exp_bagging_omp_only/: config.json  last_command.txt
profiling/bagging_maqao/exp_bagging_opti/: last_command.txt
profiling/bagging_maqao/exp_bagging_para/: config.json  last_command.txt
profiling/boosting_maqao/exp_boosting/: last_command.txt
profiling/boosting_maqao/exp_boosting_opti/: config.json  last_command.txt
profiling/boosting_maqao/exp_boosting_para/: config.json  last_command.txt
profiling/tree_maqao/exp_tree/: config.json  last_command.txt
profiling/tree_maqao/exp_tree_opti/: last_command.txt
profiling/tree_maqao/exp_tree_para/: config.json  last_command.txt
results/: all_models_comparison.md
saved_models/: bagging_model_test.txt_tree_0  bagging_model_test.txt_tree_1  bagging_model_test.txt_tree_2  bagging_model_test.txt_tree_3  bagging_model_test.txt_tree_4  bagging_model_test.txt_tree_5  bagging_model_test.txt_tree_6  bagging_model_test.txt_tree_7  bagging_model_test.txt_tree_8  bagging_model_test.txt_tree_9  boosting_model_test.txt_tree_0  boosting_model_test.txt_tree_1  boosting_model_test.txt_tree_2  boosting_model_test.txt_tree_3  boosting_model_test.txt_tree_4  boosting_model_test.txt_tree_5  boosting_model_test.txt_tree_6  boosting_model_test.txt_tree_7  boosting_model_test.txt_tree_8  boosting_model_test.txt_tree_9  test  test_tree.txt  test_tree_0  test_tree_1  test_tree_10  test_tree_11  test_tree_12  test_tree_13  test_tree_14  test_tree_15  test_tree_16  test_tree_17  test_tree_18  test_tree_19  test_tree_2  test_tree_3  test_tree_4  test_tree_5  test_tree_6  test_tree_7  (+2 more)
saved_models/lightgbm_models/: feature_importance.txt  lightgbm.model
script/: benchmark_results_extended.csv  script.py
src/data_clean/: CMakeLists.txt  data_clean.cpp  data_clean.h  data_clean_tests  output.csv  test.csv
src/ensemble/bagging/: CMakeLists.txt  bagging.cpp  bagging.h  bagging_model.txt  tests_bagging
src/ensemble/boosting/: CMakeLists.txt  boosting.cpp  boosting.h  loss_function.cpp  tests_boosting.cpp
src/ensemble/boosting_XGBoost/: CMakeLists.txt  boosting_XGBoost.cpp  boosting_XGBoost.h  main_XGBoost.cpp  tests_XGBoost  tests_XGBoost.cpp
src/ensemble/boosting_advanced/: CMakeLists.txt  binning_methods.h  boosting_advanced.h  boosting_improved.cpp  boosting_improved.h
src/ensemble/boosting_lightgbm/: CMakeLists.txt  my_lightgbm.cpp  my_lightgbm.h
src/functions/feature/: CMakeLists.txt  feature_importance.cpp  feature_importance.h
src/functions/io/: functions_io.cpp  functions_io.h  visualization_utils.cpp  visualization_utils.h
src/functions/loss/: CMakeLists.txt  loss_function.cpp
src/functions/math/: CMakeLists.txt  math_functions.cpp  math_functions.h
src/functions/tree/: CMakeLists.txt  decision_tree_single.cpp  decision_tree_single.h  feature_importance.cpp  feature_importance.h  tests_decision_tree_single.cpp  tree_model.txt  tree_visualization.h
src/functions/tree/vizualization/: tree_visualization.cpp  tree_visualization.h
src/main/: main.cpp  main_comparison.cpp  main_data_clean.cpp  main_kfold.cpp  utility.cpp  utility.h
src/model_comparison/: CMakeLists.txt  model_comparison.cpp  model_comparison.h
src/pipeline/: CMakeLists.txt  data_split.cpp  data_split.h  getModelParameters.cpp  getModelParameters.h  model_params.cpp  model_params.h  run_models.cpp  run_models.h
src/utils/: CMakeLists.txt  utility.cpp  utility.h
tests/: bagging_test.cpp  boosting_test.cpp  cross_validation_test.cpp  data_clean_test.cpp  decision_tree_test.cpp  math_functions_test.cpp  xgboost_test.cpp
(+6442 files in other folders)
